<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Мобильный телефон -->
    <LinearLayout
        style="@style/item_bar"
        android:minHeight="@dimen/size_large_72">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp"/>

        <LinearLayout
            style="@style/item_bar_detail">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_layout"
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/phone_et"
                    android:hint="@string/phone_hint"
                    android:text="@string/phone_value"
                    android:inputType="phone"
                    style="@style/edit_text"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/call_img"
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>

    </LinearLayout>

    <View
        style="@style/horizontal_divider"/>

    <!-- EMail -->

    <LinearLayout
        style="@style/item_bar"
        android:minHeight="@dimen/size_large_72">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24"/>

        <LinearLayout
            style="@style/item_bar_detail">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/email_et"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:text="@string/email_value"
                    style="@style/edit_text"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/mail_send_img"
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>

    </LinearLayout>

    <View
        style="@style/horizontal_divider"
        />

    <!-- VK -->
    <LinearLayout
        style="@style/item_bar"
        android:minHeight="@dimen/size_large_72">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/vk_circle_black_24"/>

        <LinearLayout
            style="@style/item_bar_detail">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vk_layout"
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/vk_et"
                    android:hint="@string/vk_hint"
                    android:text="@string/vk_value"
                    style="@style/edit_text"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/vk_open_img"
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>

    </LinearLayout>

    <View
        style="@style/horizontal_divider"/>

    <!-- Репозиторий -->
    <LinearLayout
        style="@style/item_bar"
        android:minHeight="@dimen/size_large_72">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/github_circle_24"/>

        <LinearLayout
            style="@style/item_bar_detail">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/git_layout"
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/git_et"
                    android:hint="@string/git_hint"
                    android:text="@string/git_value"
                    style="@style/edit_text"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/git_open_img"
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>

    </LinearLayout>

    <View
        style="@style/horizontal_divider"/>

    <!-- О себе -->
    <LinearLayout
        style="@style/item_bar">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"/>

        <LinearLayout
            style="@style/item_bar_detail">

            <android.support.design.widget.TextInputLayout
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/self_et"
                    android:hint="@string/self_hint"
                    android:text="@string/self_value"
                    android:inputType="textMultiLine"
                    style="@style/edit_text"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"/>

    </LinearLayout>

    <View
        style="@style/horizontal_divider"/>

</LinearLayout>