<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logo_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="contentDescription">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                style="@style/logo_text_title"
                android:text="@string/app_title"
                android:textSize="@dimen/font_huge_48"/>

            <TextView
                style="@style/logo_text_name"
                android:text="@string/by"/>

            <TextView
                style="@style/logo_text_name"
                android:text="@string/app_name"/>

        </LinearLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
