<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/autorization_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/size_profile_image_256"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        app:cardElevation="@dimen/spacing_small_8"
        app:cardCornerRadius="@dimen/size_line_2">

        <View
            android:layout_width="@dimen/size_line_3"
            android:layout_height="@dimen/size_small_24"
            android:layout_marginTop="@dimen/spacing_half_large_28"
            android:background="@color/color_accent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_half_large_28"
                android:layout_marginTop="@dimen/spacing_half_large_28"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom"
                android:textSize="@dimen/font_larger_24"
                android:text="@string/login_title"
                android:textColor="@color/orange"/>

                <android.support.design.widget.TextInputLayout
                    style="@style/login_bar">

                    <EditText
                        android:id="@+id/login_email"
                        style="@style/login_bar_edit"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:text="@string/email_value"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/login_bar">

                    <EditText
                        android:id="@+id/login_password"
                        style="@style/login_bar_edit"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:text="@string/rating_item_1_value"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_half_large_28"
                    android:paddingLeft="@dimen/size_duble_small_48"
                    android:paddingRight="@dimen/size_duble_small_48"
                    android:backgroundTint="@color/orange"
                    android:text="@string/login_title"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/login_fogott_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:text="@string/login_fogott_password"
                    android:textColor="@color/grey_light"
                    android:layout_marginBottom="@dimen/spacing_medial_24"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>