<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="contentDescription">

    <FrameLayout
        android:id="@+id/autorization_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/login_bg"/>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_profile_image_256"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            app:cardElevation="@dimen/spacing_small_8"
            app:cardCornerRadius="@dimen/size_line_2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:paddingTop="@dimen/spacing_medium_32">

                    <View
                        android:id="@+id/login_indicator"
                        android:layout_width="@dimen/size_line_4"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/spacing_medial_24"
                        android:background="@color/color_accent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/spacing_small_8"
                        android:paddingTop="@dimen/spacing_small_8"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="bottom"
                        android:textSize="@dimen/font_larger_24"
                        android:text="@string/login_title"
                        android:textColor="@color/color_accent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:paddingBottom="@dimen/spacing_medial_24"
                    android:paddingLeft="@dimen/spacing_half_large_28"
                    android:paddingRight="@dimen/spacing_half_large_28">

                    <android.support.design.widget.TextInputLayout
                        style="@style/login_bar">

                        <EditText
                            android:id="@+id/login_email_et"
                            style="@style/login_bar_edit"
                            android:hint="@string/email_hint"
                            android:inputType="textEmailAddress"
                            android:text=""/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        style="@style/login_bar">

                        <EditText
                            android:id="@+id/login_password_et"
                            style="@style/login_bar_edit"
                            android:hint="@string/login_password"
                            android:inputType="textPassword"
                            android:text=""/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:paddingLeft="@dimen/size_duble_small_48"
                        android:paddingRight="@dimen/size_duble_small_48"
                        android:theme="@style/AppTheme.Button.Red"
                        android:text="@string/login_title"/>

                    <TextView
                        android:id="@+id/login_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:text="@string/login_remember"
                        android:textColor="@color/grey_light"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>